@@ -3,6 +3,7 @@
     - Fix #291: done_testing under AsyncSubtest does not make sense
     - Fix #275: prototypes for around/after/before
     - Fix #288: Merge PR for #275
+    - Fix #290: Extra docs for srand
 
 0.000159  2023-10-25 14:09:23-07:00 America/Los_Angeles
 
